<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Collage Maker-Make anything</string>
    <string name="camera_icon">camera_icon\n</string>
    <string name="back">back</string>
    <string name="recent">Recent</string>
    <string name="grid_art">Grid Art</string>
    <string name="image">image\n</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="background">BACKGROUND</string>
    <string name="crop">Crop</string>
    <string name="freame">Freame</string>
    <string name="filter">Filter</string>
    <string name="draw">Draw</string>
    <string name="stiker">Stiker</string>
    <string name="text">Text</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="cutout">Cutout</string>
    <string name="enhance">Enhance</string>
    <string name="adjust">Adjust</string>
    <string name="drees_up">Drees up</string>
    <string name="a4">A4</string>
    <string name="access_to_all_features_nno_ads">Access to All Features.\nNo Ads.</string>
    <string name="subscription_image">Subscription Image</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="app_icon">App Icon</string>
    <string name="resolution">Resolution</string>
    <string name="feedback">Feedback</string>
    <string name="save_path">Save Path</string>
    <string name="share">Share</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="original">Original</string>
    <string name="confirm">Confirm</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="ig_1_1">IG 1 : 1</string>
    <string name="ig_4_5">IG 4 : 5</string>
    <string name="_5_4">5 : 4</string>
    <string name="_3_4">3 : 4</string>
    <string name="_4_3">4 : 3</string>
    <string name="custom">Custom</string>
    <string name="device">Device</string>
    <string name="_2_3">2 : 3</string>
    <string name="_3_2">3 : 2</string>
    <string name="_1_2">1 : 2</string>
    <string name="post">Post</string>
    <string name="header">Header</string>
    <string name="korean">한국어</string>
    <string name="english">English</string>
    <string name="dansk">Dansk</string>
    <string name="deutsch">Deutsch</string>
    <string name="espa_ol">Español</string>
    <string name="fran_ais">Français</string>
    <string name="hindi">हिन्दी</string>
    <string name="italiano">Italiano</string>
    <string name="japanese">日本語</string>
    <string name="bahasa_melayu">Bahasa Melayu</string>
    <string name="make_another">Make Another</string>
    <string name="_25">25%</string>
    <string name="saved">Saved!</string>
    <string name="more">More</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="messenger">Messenger</string>
    <string name="twitter">Twitter</string>
    <string name="ratio">Ratio</string>
    <string name="layout">Layout</string>
    <string name="margin">Margin</string>
    <string name="border">Border</string>
    <string name="_0">0</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_content_title">Privacy Policy</string>
    <string name="first_peregraph">Protecting your privacy is important to us. We hope the following statement will help you understand how we deal with the personal identifiable information (\'PII\') you may occasionally provide to us via Internet (the Google Play\'Platform).</string>
    <string name="second_peregraph">Generally, we do not collect any Pll from you when you download our Android applications. To be specific, we do not require the consumers to get registered before downloading the application, nor do we keep track of the consumers\' visits of our application, we even don\'t have a Server to store such PII.</string>
    <string name="third_peregraph">We use Facebook as ads provider. Facebook wants to show ads that are relevant to you. For more information, please check.</string>
    <string name="four_peregraph">The only situation we may get access to your Pll is when you personally decide to email us your feedback or to provide us with a bug report. The Pll we may get from you in that situation are strictly limited to your name, email address and your survey response only.</string>
    <string name="five_peregraph">In above situation, we guarantee that your PII will only be used for contacting you and improving our services. We will never use such information (e.g. your name and email address) for any other purposes, such as to further market our products, or to disclose your personal information to a third party for commercial gains.</string>
    <string name="last_updated_september_13_2021">Last updated: September 13, 2021</string>
    <string name="terms_first_peregraph">This Terms of Service (the agreement) is made between InShot Inc. and you, our customer (you). It will help you to know your rights and responsibilities that apply to your use of our mobile apps (our apps or our services)</string>
    <string name="terms_second_peregraph">Before accessing or using our app, please read and accept this agreement. If you do not agree to all these terms, you should not use our app. And we are not responsible for the product/services provided by the Third Party through our app, so if you want to use their product/services, you may comply with their terms respectively</string>
    <string name="_1_acceptance">1. Acceptance</string>
    <string name="firest_one">Downloading our app, editing photos, playing music or videos, making a purchase, or otherwise accessing or using our services will constitute your accepting this Agreement and consent to contract with us electronically.</string>
    <string name="first_two">We may revise and update this Agreement, in our sole direction. And we will notice you that we have updated our terms. If you continue to use our services, it means you accept the updated version of this Agreement.</string>
    <string name="_2_our_services">2. Our Services</string>
    <string name="second_first">We grant you access to our services. You can use our app to take photos, edit photos, play music, play videos or any other functionality that we may provide.</string>
    <string name="link_text">https://m.facebook.com/ads/ad_choices</string>
    <string name="from_fd43563_gmail_com">From : fd43563@gmail.com</string>
    <string name="an_excellent_photo_editor_for_instagram_recommended_to_you">An excellent photo editor for Instagram recommended to you</string>
    <string name="composs">I found a really great photo editor for Instagram. It\'s GridArt. I\'ve been using it to post many beautiful photos to Instagram. Download GridArt on Google Play:\n\nhttps://play.google.com/store/apps/details?id=photoeditor.layout.collagemaker</string>
    <string name="no_thanks">No,thanks</string>
    <string name="send_feedback">send Feedback</string>
    <string name="font">Font</string>
    <string name="keyboard">keyboard</string>
    <string name="paint">Paint</string>
    <string name="preset">Preset</string>
    <string name="after">After</string>
    <string name="before">Before</string>
    <string name="free_for_the_first_time">Free for the first time</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="style">Style</string>
    <string name="shape">Shape</string>
    <string name="shop">shop</string>
    <string name="restore">restore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="summer">Summer</string>
    <string name="school">School</string>
    <string name="childhood">Childhood</string>
    <string name="birthday">Birthday</string>
    <string name="gridart_pro">GridArt Pro</string>
    <string name="free_trail">FREE TRAIL</string>
    <string name="_21_stickers">21 Stickers</string>
    <string name="proud_moments">Proud Moments</string>
    <string name="use">USE</string>
    <string name="childlike_stickers">Childlike Stickers</string>
    <string name="_26_stickers">26 Stickers</string>
    <string name="graduation_season_1">Graduation Season #1</string>
    <string name="_9_backgrounds">9 Backgrounds</string>
    <string name="golden_grad_party">Golden Grad Party</string>
    <string name="summer_time">Summer Time</string>
    <string name="gravitas_one">Gravitas One</string>
    <string name="collage">Collage</string>
    <string name="_5_filter">5 Filter</string>
    <string name="templates">Templates</string>
    <string name="upto4096">Up to 4096px. It also depends on \n original resolution and phone \n memory.</string>
    <string name="upto1920">Up to 1920px. Good for sharing on \nsocial network.</string>
    <string name="regular_resolution">Regular Resolution</string>
    <string name="high_resolution">High Resolution</string>
    <string name="grain">Grain</string>
    <string name="hue">Hue</string>
    <string name="tint">Tint</string>
    <string name="shadow">Shadow</string>
    <string name="highlight">Highlight</string>
    <string name="saturation">Saturation</string>
    <string name="warmth">Warmth</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="pink">Pink</string>
    <string name="lomo">Lomo</string>
    <string name="gold">Gold</string>
    <string name="dew">Dew</string>
    <string name="warm">Warm</string>
    <string name="nature">Nature</string>
    <string name="story">Story</string>
    <string name="bright">Bright</string>
    <string name="fade">Fade</string>
    <string name="size">Size</string>

</resources>