<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_15sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/resolution"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupResolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <RadioButton
                android:id="@+id/radio_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_resolution"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/upto4096"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <RadioButton
                android:id="@+id/radio_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regular_resolution"
                android:checked="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/upto1920"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

        </LinearLayout>

    </RadioGroup>

</LinearLayout>
