<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Setting_Activity.Terms_of_Use_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/linear_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/ic_back"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/tvPrivacyPolicyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/ivBack"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@id/ivBack"
                android:text="Terms of Use"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@id/ivBack"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@android:color/darker_gray" />


        </RelativeLayout>


        <TextView
            android:id="@+id/tvPrivacyPolicyContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Terms of Use"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrivacyPolicyContentTitle"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated_september_13_2021"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />


                <TextView
                    tools:ignore="MissingPrefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_first_peregraph"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/terms_second_peregraph"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/_1_acceptance"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/firest_one"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/first_two"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/_2_our_services"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/second_first"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />



            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>